{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 80,
  "lineage": "b8641a30-bf49-57f7-fd5d-8480f2358d6d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "taylor_swift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c95ddc49a2ac351f",
            "arn": "arn:aws:ec2:eu-west-3:703076243159:instance/i-081c7e2c377b16a19",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-081c7e2c377b16a19",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0da730c432967c7b6",
            "private_dns": "ip-172-31-33-41.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.33.41",
            "public_dns": "ec2-13-39-81-237.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.39.81.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-000a53e062e8b837c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed7ce3c9355dee04",
            "tags": {
              "Name": "instance-terraform"
            },
            "tags_all": {
              "Name": "instance-terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a12fbba663a279d2"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "taylor_swift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:703076243159:security-group/sg-0f14b49eb4a42b45e",
            "description": "Allow HTTP and HTTPs inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0f14b49eb4a42b45e",
            "ingress": [],
            "name": "taylor_swift",
            "name_prefix": "",
            "owner_id": "703076243159",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dbf3e49157138caf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.taylor_swift_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "taylor_swift_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/24"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1228861337",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f14b49eb4a42b45e",
            "security_group_rule_id": "sgr-0861662f8e8223e6d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.taylor_swift",
            "module.taylor_swift_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "taylor_swift_http_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-993806495",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f14b49eb4a42b45e",
            "security_group_rule_id": "sgr-0b52ae85918fca4f3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.taylor_swift",
            "module.taylor_swift_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.taylor_swift_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:703076243159:loadbalancer/app/dev-alb/44cf96872567b330",
            "arn_suffix": "app/dev-alb/44cf96872567b330",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-alb-1717317811.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:703076243159:loadbalancer/app/dev-alb/44cf96872567b330",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b01366c80789dbb2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03550b78c490c4927"
              },
              {
                "subnet_id": "subnet-042adf86ee8264a25"
              },
              {
                "subnet_id": "subnet-0b12fbfef845b192c"
              }
            ],
            "subnets": [
              "subnet-03550b78c490c4927",
              "subnet-042adf86ee8264a25",
              "subnet-0b12fbfef845b192c"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0dbf3e49157138caf",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.taylor_swift_sg.aws_security_group.this",
            "module.taylor_swift_sg.aws_security_group.this_name_prefix",
            "module.taylor_swift_vpc.aws_subnet.public",
            "module.taylor_swift_vpc.aws_vpc.this",
            "module.taylor_swift_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.taylor_swift_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:703076243159:listener/app/dev-alb/44cf96872567b330/e8af15901cf030bf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:703076243159:targetgroup/dev-20231120203058557600000005/8b660fee06d1f95d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:703076243159:listener/app/dev-alb/44cf96872567b330/e8af15901cf030bf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:703076243159:loadbalancer/app/dev-alb/44cf96872567b330",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.taylor_swift_alb.aws_lb.this",
            "module.taylor_swift_alb.aws_lb_target_group.main",
            "module.taylor_swift_sg.aws_security_group.this",
            "module.taylor_swift_sg.aws_security_group.this_name_prefix",
            "module.taylor_swift_vpc.aws_subnet.public",
            "module.taylor_swift_vpc.aws_vpc.this",
            "module.taylor_swift_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.taylor_swift_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:703076243159:targetgroup/dev-20231120203058557600000005/8b660fee06d1f95d",
            "arn_suffix": "targetgroup/dev-20231120203058557600000005/8b660fee06d1f95d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:703076243159:targetgroup/dev-20231120203058557600000005/8b660fee06d1f95d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-20231120203058557600000005",
            "name_prefix": "dev-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dbf3e49157138caf"
          },
          "dependencies": [
            "module.taylor_swift_alb.aws_lb.this",
            "module.taylor_swift_sg.aws_security_group.this",
            "module.taylor_swift_sg.aws_security_group.this_name_prefix",
            "module.taylor_swift_vpc.aws_subnet.public",
            "module.taylor_swift_vpc.aws_vpc.this",
            "module.taylor_swift_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.taylor_swift_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.taylor_swift_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:703076243159:security-group/sg-0b01366c80789dbb2",
            "description": "Security group for dev environment",
            "egress": [],
            "id": "sg-0b01366c80789dbb2",
            "ingress": [],
            "name": "dev-20231120202754417300000002",
            "name_prefix": "dev-",
            "owner_id": "703076243159",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0dbf3e49157138caf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.taylor_swift_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.taylor_swift_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1529811048",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b01366c80789dbb2",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.taylor_swift_sg.aws_security_group.this",
            "module.taylor_swift_sg.aws_security_group.this_name_prefix",
            "module.taylor_swift_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.taylor_swift_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-605406556",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b01366c80789dbb2",
            "security_group_rule_id": "sgr-07f8a35e8de5306fa",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.taylor_swift_sg.aws_security_group.this",
            "module.taylor_swift_sg.aws_security_group.this_name_prefix",
            "module.taylor_swift_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1438377657",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b01366c80789dbb2",
            "security_group_rule_id": "sgr-00359b4da8e9e8e13",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.taylor_swift_sg.aws_security_group.this",
            "module.taylor_swift_sg.aws_security_group.this_name_prefix",
            "module.taylor_swift_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.taylor_swift_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:703076243159:network-acl/acl-0ae1a015f99b09585",
            "default_network_acl_id": "acl-0ae1a015f99b09585",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ae1a015f99b09585",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "703076243159",
            "subnet_ids": [
              "subnet-03550b78c490c4927",
              "subnet-042adf86ee8264a25",
              "subnet-0b12fbfef845b192c"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dbf3e49157138caf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.taylor_swift_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.taylor_swift_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:703076243159:route-table/rtb-05833cf0f05cb2c2b",
            "default_route_table_id": "rtb-05833cf0f05cb2c2b",
            "id": "rtb-05833cf0f05cb2c2b",
            "owner_id": "703076243159",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0dbf3e49157138caf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.taylor_swift_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.taylor_swift_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:703076243159:security-group/sg-0be4da220007534cf",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0be4da220007534cf",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "703076243159",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dbf3e49157138caf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.taylor_swift_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.taylor_swift_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:703076243159:internet-gateway/igw-0eb9c925fd8130a98",
            "id": "igw-0eb9c925fd8130a98",
            "owner_id": "703076243159",
            "tags": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dbf3e49157138caf"
          },
          "dependencies": [
            "module.taylor_swift_vpc.aws_vpc.this",
            "module.taylor_swift_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.taylor_swift_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0eb9c925fd8130a98",
            "id": "r-rtb-0dd68a5d90b4bfdb81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dd68a5d90b4bfdb8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.taylor_swift_vpc.aws_internet_gateway.this",
            "module.taylor_swift_vpc.aws_route_table.public",
            "module.taylor_swift_vpc.aws_vpc.this",
            "module.taylor_swift_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.taylor_swift_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:703076243159:route-table/rtb-0dd68a5d90b4bfdb8",
            "id": "rtb-0dd68a5d90b4bfdb8",
            "owner_id": "703076243159",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbf3e49157138caf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.taylor_swift_vpc.aws_vpc.this",
            "module.taylor_swift_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.taylor_swift_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0920b9588067bbc0c",
            "route_table_id": "rtb-0dd68a5d90b4bfdb8",
            "subnet_id": "subnet-0b12fbfef845b192c"
          },
          "dependencies": [
            "module.taylor_swift_vpc.aws_route_table.public",
            "module.taylor_swift_vpc.aws_subnet.public",
            "module.taylor_swift_vpc.aws_vpc.this",
            "module.taylor_swift_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f6d256f65933da0",
            "route_table_id": "rtb-0dd68a5d90b4bfdb8",
            "subnet_id": "subnet-042adf86ee8264a25"
          },
          "dependencies": [
            "module.taylor_swift_vpc.aws_route_table.public",
            "module.taylor_swift_vpc.aws_subnet.public",
            "module.taylor_swift_vpc.aws_vpc.this",
            "module.taylor_swift_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f81c134c810500eb",
            "route_table_id": "rtb-0dd68a5d90b4bfdb8",
            "subnet_id": "subnet-03550b78c490c4927"
          },
          "dependencies": [
            "module.taylor_swift_vpc.aws_route_table.public",
            "module.taylor_swift_vpc.aws_subnet.public",
            "module.taylor_swift_vpc.aws_vpc.this",
            "module.taylor_swift_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.taylor_swift_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:703076243159:subnet/subnet-0b12fbfef845b192c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b12fbfef845b192c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703076243159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-eu-west-3a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-eu-west-3a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dbf3e49157138caf"
          },
          "dependencies": [
            "module.taylor_swift_vpc.aws_vpc.this",
            "module.taylor_swift_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:703076243159:subnet/subnet-042adf86ee8264a25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042adf86ee8264a25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703076243159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-eu-west-3b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-eu-west-3b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dbf3e49157138caf"
          },
          "dependencies": [
            "module.taylor_swift_vpc.aws_vpc.this",
            "module.taylor_swift_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:703076243159:subnet/subnet-03550b78c490c4927",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03550b78c490c4927",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703076243159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-eu-west-3c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-eu-west-3c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dbf3e49157138caf"
          },
          "dependencies": [
            "module.taylor_swift_vpc.aws_vpc.this",
            "module.taylor_swift_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.taylor_swift_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:703076243159:vpc/vpc-0dbf3e49157138caf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae1a015f99b09585",
            "default_route_table_id": "rtb-05833cf0f05cb2c2b",
            "default_security_group_id": "sg-0be4da220007534cf",
            "dhcp_options_id": "dopt-06b062428cbcc1628",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dbf3e49157138caf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05833cf0f05cb2c2b",
            "owner_id": "703076243159",
            "tags": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}